monitoring/prometheus/service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-prometheus
  namespace: monitoring
spec:
  selector:
    app: prometheus
    tier: backend
  ports:
  - protocol: TCP
    port: 9090
    targetPort: 9090
  type: ClusterIP
