monitoring/prometheus/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: prometheus.6e4fdb2c20004f71beb2.westeurope.aksapp.io
      http:
        paths:
        - path: /*
          backend:
            serviceName: service-prometheus
            servicePort: 9090
